@@ -1,0 +1,3 @@
+問題 #<%= @issue.id %> が報告されました。
+----------------------------------------
+<%= render :file => "_issue", :use_full_path => true, :locals => { :issue => @issue } %>
